user login and logout functionality

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,8 @@
+@import 'bootstrap/dist/css/bootstrap';
 
+.navbar{
+  background-color: #FDF6EA !important;
+}
 // pagination styling
 
 .flickr_pagination {
