--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,30 +1,38 @@
 <%= render 'shared/errors', obj: @user %>
-<%= form_with(model: @user, local: true) do |f| %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= form_with(model: @user, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
 
-  <p>
-    <%= f.label :username %><br/>
-    <%= f.text_field :username, placeholder: "Enter username"%>
-  </p>
+        <div class="form-group row">
+          <%= f.label :username, class: "col-2 col-form-label text-light" %><br/>
+          <div class="col-10"> 
+            <%= f.text_field :username, class: "form-control shadow rounded", placeholder: "Enter username"%>
+          </div>
+        </div>
 
-  <p>
-    <%= f.label :email %><br/>
-    <%= f.email_field :email, placeholder: "Enter email address" %>
-  </p>
+        <div class="form-group row">
+          <%= f.label :email, class: "col-2 col-form-label text-light" %><br/>
+          <div class="col-10"> 
+            <%= f.email_field :email, class: "form-control shadow rounded", placeholder: "Enter email address" %>
+          </div>
+        </div>
 
-  <p>
-    <%= f.label :password %><br/>
-    <%= f.password_field :password, placeholder: "Choose a password" %>
-  </p>
+        <div class="form-group row">
+          <%= f.label :password, class: "col-2 col-form-label text-light" %><br/>
+          <div class="col-10"> 
+            <%= f.password_field :password, class: "form-control shadow rounded",  placeholder: "Choose a password" %>
+          </div>
+        </div>
 
-  <p>
-    <%= f.submit(@user.new_record? ? "Sign up" : "Update Account") %>
-  </p>
-
-  <p>
-    <%= link_to '[Cancel and return to articles listing]', articles_path %>
-  </p> 
-
-<% end %>
-
-
+        <div class="form-group row justify-content-center">
+          <%= f.submit(@user.new_record? ? "Sign up" : "Update Account") %>
+        </div>
+      <% end %>
+    </div>
+      <div class="mb-3">  
+      <%= link_to '[Cancel and return to articles listing]', articles_path , class: "text-info"%>
+      </div>
+  </div>
+</div>
 
