--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<h1> Article Listing page </h1>
+<h1 class="text-center mt-4"> Article Listing page </h1>
 
 <div class="flickr_pagination">
   <%= will_paginate @articles, :container => false %>
