--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,7 +1,10 @@
 <h1 class="text-center mt-4"> Create a new category </h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <%= render 'form' %>
 
-<%= render 'form' %>
-
-<div class="mb-3">  
-  <%= link_to '[Cancel and return to categories listing]', categories_path , class: "text-info"%>
+    <div class="mb-3">  
+      <%= link_to '[Cancel and return to categories listing]', categories_path , class: "text-info"%>
+    </div>
+  </div>
 </div>
