--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,8 +1,11 @@
 <h1 class="text-center mt-4"> Edit category name </h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <%= render 'form' %>
 
-<%= render 'form' %>
 
-
-<div class="mb-3">  
-  <%= link_to '[Cancel and return to Category]', category_path(@category) , class: "text-info"%>
+    <div class="mb-3">  
+      <%= link_to '[Cancel and return to Category]', category_path(@category) , class: "text-info"%>
+    </div>
+  </div>
 </div>
